    TODO: Use NSDictionaryController and bindings for all controls in main window and sub-controllers
    TODO: File watching still broken for script path
    TODO: Documentation should be updated about what Use Icon as Template does
    TODO: Fix line numbering in built-in editor (Improve built-in editor)
    TODO: Support for authenticated task termination

    http://stackoverflow.com/questions/13355363/nstask-requires-flush-when-reading-from-a-process-stdout-terminal-does-not
    http://stackoverflow.com/questions/1276029/non-blocking-stdio

5.2
    TODO: Update documentation, do a better job of explaining exactly how the Status Menu interface works
    TODO: Refactor status menu item menu generation from output to share code between ScriptExec and Platypus.app
    TODO: Drag and drop from icon view should be file based, not TIFF pasteboard data
    TODO: Fix status menu output issue
    TODO: Clicked row contextual menu handling
    TODO: Refactor TMP_STDIN_PATH
    TODO: Update documentation & man page, remove refs to options that are gone (text encoding, secure script)

    TODO: Add support for feeding script output into status item view like Tapir did (cool feature)

    * Got rid of text encoding settings. Platypus now uses UTF8.
    * Got rid of "Secure bundled script option", which is useless bullshit anyway
    * Bundled files table view now uses combined image and text cell instead of two columns
    * Renamed Advanced menu to Action
    * Fixed issue where main application window would not remember its last position

5.1
    * New Build All Examples feature
    * ScriptExec windows now remember window size and position between launches
    * Fixed issue where MainMenu.nib was stripped and thus not editable using XCode
    * Smarter handling of dropped files via more intelligent methods to determine if a file is a script
    * Fixed issue with window behaviour during resizing in Progress Bar interface