@@ -104,9 +104,9 @@
 #define TMP_STDIN_PATH              @"/tmp/.platypus_stdin.XXXXXX"
 
 // status item display types
-#define PLATYPUS_STATUSITEM_DISPLAY_TYPE_TEXT @"Text"
-#define PLATYPUS_STATUSITEM_DISPLAY_TYPE_ICON @"Icon"
-#define PLATYPUS_STATUSITEM_DISPLAY_TYPE_DEFAULT PLATYPUS_STATUSITEM_DISPLAY_TYPE_TEXT
+#define PLATYPUS_STATUSITEM_DISPLAY_TYPE_TEXT       @"Text"
+#define PLATYPUS_STATUSITEM_DISPLAY_TYPE_ICON       @"Icon"
+#define PLATYPUS_STATUSITEM_DISPLAY_TYPE_DEFAULT    PLATYPUS_STATUSITEM_DISPLAY_TYPE_TEXT
 
 // execution style
 typedef enum PlatypusExecStyle {
